--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -23,10 +23,16 @@
   url = "registration/"
   weight = 20
 
-#[[main]]
-#  name = "Programme"
-#  url = "program/"
-#  weight = 30
+[[main]]
+  name = "Programme"
+  url = "program/"
+  weight = 30
+
+[[main]]
+  name = "Commenditaires"
+  url = "sponsors/"
+  weight = 60
+
 
 [[main]]
   name = "Contact"
