--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -8,30 +8,35 @@
 #  url = "#about"
 #  weight = 10
 
-[[main]]
-  name = "Appel à contributions"
-  url = "call-for-papers/"
-  weight = 15
+#[[main]]
+#  name = "Appel à contributions"
+#  url = "call-for-papers/"
+#  weight = 15
 
 [[main]]
   name = "Lieu"
   url = "venue/"
   weight = 18 
 
-[[main]]
-  name = "Inscription"
-  url = "registration/"
-  weight = 20
+#[[main]]
+#  name = "Inscription"
+#  url = "registration/"
+#  weight = 20
 
 [[main]]
   name = "Programme"
   url = "program/"
   weight = 30
-
+  
 [[main]]
-  name = "Commenditaires"
-  url = "sponsors/"
-  weight = 60
+  name = " Activités pré-congrès"
+  url = "aligned-events/"
+  weight = 40
+
+#[[main]]
+#  name = "Commenditaires"
+#  url = "sponsors/"
+#  weight = 60
 
 
 [[main]]
